# StudyCards

./: .gitignore  .impeccable.md  .prettierignore  CLAUDE.md  LICENSE  PLAN.md  README.md  index.html  package.json
.claude/skills/generate-cards/: SKILL.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  dependabot-auto-merge.yml
docs/: REFERENCE.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: anki_export.rs  anki_import.rs  lib.rs  main.rs  rule_gen.rs  watcher.rs
src-tauri/src/commands/: cards.rs  decks.rs  llm_cmds.rs  mod.rs  sources.rs  study.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs
src-tauri/src/fsrs_engine/: mod.rs
src-tauri/src/llm/: mod.rs  providers.rs
src/components/: sidebar.tsx  theme-provider.tsx
src/features/: dashboard.tsx  generate.tsx  help.tsx  index.ts  library.tsx  settings.tsx  study.tsx
