[package]
name = "studycards"
version = "0.1.0"
edition = "2021"

[lib]
name = "studycards_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
rusqlite_migration = "2.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
fsrs = "5.2.0"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
thiserror = "2"
async-trait = "0.1"
log = "0.4"
notify = { version = "7", features = ["macos_fsevent"] }
